load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "gitlab.com/expected.sh/agent/cmd/expected-test",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/containerd/go-cni:go_default_library",
        "//vendor/github.com/containerd/go-runc:go_default_library",
    ],
)

go_binary(
    name = "expected-test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
