load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "gitlab.com/expected.sh/agent/cmd/nekomata-server",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/function:go_default_library",
        "//pkg/protocol:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "nekomata-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
