load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "protocol_proto",
    srcs = ["function.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "protocol_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "gitlab.com/expected.sh/agent/pkg/protocol",
    proto = ":protocol_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":protocol_go_proto"],
    importpath = "gitlab.com/expected.sh/agent/pkg/protocol",
    visibility = ["//visibility:public"],
)
